Your eyes are the color of chocolate.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 										<div class="12u">
 											<header class="first major">
 												<h2>This is an important heading</h2>
-												<p>And this is where we talk about why we’re <strong>pretty awesome</strong> ...</p>
+												<p>And this is where we talk about why Kevin's a <strong>pretty penis</strong> ...</p>
 											</header>
 										</div>
 									</div>
