got rid of the penis

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 									<div class="row">
 										<div class="12u">
 											<header class="first major">
-												<h2>This is an important heading</h2>
-												<p>And this is where we talk about why Kevin's a <strong>pretty penis</strong> ...</p>
+												<h2>Claremont</h2>
+												<p>Some text goes here.</p>
 											</header>
 										</div>
 									</div>
