--- a/mens/index.html
+++ b/mens/index.html
@@ -2,7 +2,7 @@
 ---
 <html>
 	<head>
-		<title>5C Claremont Volleyball</title>
+		<title>Men's Volleyball</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -10,6 +10,14 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 	</head>
+	<style>
+	#header-wrapper {
+		background: url("/images/mens/earl-spike.jpg");
+		background-position: 30% 35%;
+		background-size: cover;
+		padding: 4em 0;
+	}
+	</style>
   <body class="no-sidebar">
     <div id="page-wrapper">
 
@@ -34,11 +42,13 @@
 
                     <article>
                       <header class="major">
-                        <h2>No Sidebar</h2>
-                        <p>Sidebars are not welcome here</p>
+                        <h2>Men's Volleyball</h2>
+                        <p>The Claremont Men's Volleyball team is a division II club team that competes in regional and national tournaments. We are currently the reigning champions of the Southern California Collegiate Volleyball League (SCCVL) and we will begin our title defense in January. The team is open to students from any of the Claremont Colleges (including CGU) and we pride ourselves on offering a high level of play to interested players.
+
+</p>
                       </header>
 
-                      <span class="image featured"><img src="/images/pic08.jpg" alt="" /></span>
+                      <span class="image featured"><img src="/images/mens/nationals-team.jpg" alt="" /></span>
 
                       <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
                       Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
