--- a/calendar/index.html
+++ b/calendar/index.html
@@ -16,7 +16,7 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 	</head>
-	<body class="right-sidebar">
+	<body class="no-sidebar">
 		<div id="page-wrapper">
 
 			<!-- Header Wrapper -->
@@ -34,161 +34,16 @@
 					<div class="wrapper style2">
 						<div class="inner">
 							<div class="container">
-								<div class="row">
-									<div class="8u 12u(mobile)">
-										<div id="content">
+								<div id="content">
 
-											<!-- Content -->
+									<!-- Content -->
 
-												<article>
-													<header class="major">
-														<h2>Right Sidebar</h2>
-														<p>Which means the sidebar is on the right</p>
-													</header>
-
-													<span class="image featured"><img src="/images/pic08.jpg" alt="" /></span>
-
-													<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-													Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-													Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-													consequat etiam lorem ipsum dolor sit amet nullam.</p>
-
-													<h3>More intriguing information</h3>
-													<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam risus, at tempus
-													justo. Sed dictum rutrum massa eu volutpat. Quisque vitae hendrerit sem. Pellentesque lorem felis,
-													ultricies a bibendum id, bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet
-													vulputate. Nulla quis nibh ipsum, sed egestas justo. Morbi ut ante mattis orci convallis tempor.
-													Etiam a lacus a lacus pharetra porttitor quis accumsan odio. Sed vel euismod nisi. Etiam convallis
-													rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien.
-													Donec sagittis massa et leo semper a scelerisque metus faucibus. Morbi congue mattis mi.
-													Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum commodo luctus.</p>
-
-													<p>Phasellus odio risus, faucibus et viverra vitae, eleifend ac purus. Praesent mattis, enim
-													quis hendrerit porttitor, sapien tortor viverra magna, sit amet rhoncus nisl lacus nec arcu.
-													Suspendisse laoreet metus ut metus imperdiet interdum aliquam justo tincidunt. Mauris dolor urna,
-													fringilla vel malesuada ac, dignissim eu mi. Praesent mollis massa ac nulla pretium pretium.
-													Maecenas tortor mauris, consectetur pellentesque dapibus eget, tincidunt vitae arcu.
-													Vestibulum purus augue, tincidunt sit amet iaculis id, porta eu purus.</p>
-												</article>
-
-										</div>
-									</div>
-									<div class="4u 12u(mobile)">
-										<div id="sidebar">
-
-											<!-- Sidebar -->
-
-												<section>
-													<header class="major">
-														<h2>Subheading</h2>
-													</header>
-													<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-													Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-													Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-													consequat etiam.</p>
-													<footer>
-														<a href="#" class="button icon fa-info-circle">Find out more</a>
-													</footer>
-												</section>
-
-												<section>
-													<header class="major">
-														<h2>Subheading</h2>
-													</header>
-													<ul class="style2">
-														<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
-														<li><a href="#">Ornare in hendrerit in lectus</a></li>
-														<li><a href="#">Semper mod quis eget mi dolore</a></li>
-														<li><a href="#">Quam turpis feugiat sit dolor</a></li>
-														<li><a href="#">Amet ornare in hendrerit in lectus</a></li>
-														<li><a href="#">Semper mod quisturpis nisi</a></li>
-														<li><a href="#">Consequat etiam lorem phasellus</a></li>
-														<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
-														<li><a href="#">Semper mod quisturpis nisi</a></li>
-													</ul>
-													<footer>
-														<a href="#" class="button icon fa-arrow-circle-o-right">Do Something</a>
-													</footer>
-												</section>
-
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="wrapper style3">
-						<div class="inner">
-							<div class="container">
-								<div class="row">
-									<div class="8u 12u(mobile)">
-
-										<!-- Article list -->
-											<section class="box article-list">
-												<h2 class="icon fa-file-text-o">Recent Posts</h2>
-
-												<!-- Excerpt -->
-													<article class="box excerpt">
-														<a href="#" class="image left"><img src="/images/pic04.jpg" alt="" /></a>
-														<div>
-															<header>
-																<span class="date">July 24</span>
-																<h3><a href="#">Repairing a hyperspace window</a></h3>
-															</header>
-															<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus
-															semper mod quisturpis nisi consequat etiam lorem. Phasellus quam turpis,
-															feugiat et sit amet ornare in, hendrerit in lectus semper mod quis eget mi dolore.</p>
-														</div>
-													</article>
-
-												<!-- Excerpt -->
-													<article class="box excerpt">
-														<a href="#" class="image left"><img src="/images/pic05.jpg" alt="" /></a>
-														<div>
-															<header>
-																<span class="date">July 18</span>
-																<h3><a href="#">Adventuring with a knee injury</a></h3>
-															</header>
-															<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus
-															semper mod quisturpis nisi consequat etiam lorem. Phasellus quam turpis,
-															feugiat et sit amet ornare in, hendrerit in lectus semper mod quis eget mi dolore.</p>
-														</div>
-													</article>
-
-												<!-- Excerpt -->
-													<article class="box excerpt">
-														<a href="#" class="image left"><img src="/images/pic06.jpg" alt="" /></a>
-														<div>
-															<header>
-																<span class="date">July 14</span>
-																<h3><a href="#">Preparing for Y2K38</a></h3>
-															</header>
-															<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus
-															semper mod quisturpis nisi consequat etiam lorem. Phasellus quam turpis,
-															feugiat et sit amet ornare in, hendrerit in lectus semper mod quis eget mi dolore.</p>
-														</div>
-													</article>
-
-											</section>
-									</div>
-									<div class="4u 12u(mobile)">
-
-										<!-- Spotlight -->
-											<section class="box spotlight">
-												<h2 class="icon fa-file-text-o">Spotlight</h2>
-												<article>
-													<a href="#" class="image featured"><img src="/images/pic07.jpg" alt=""></a>
-													<header>
-														<h3><a href="#">Neural Implants</a></h3>
-														<p>The pros and cons. Mostly cons.</p>
-													</header>
-													<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus semper mod
-													quisturpis nisi consequat ornare in, hendrerit in lectus semper mod quis eget mi quat etiam
-													lorem. Phasellus quam turpis, feugiat sed et lorem ipsum dolor consequat dolor feugiat sed
-													et tempus consequat etiam.</p>
-													<p>Lorem ipsum dolor quam turpis, feugiat sit amet ornare in, hendrerit in lectus semper
-													mod quisturpis nisi consequat etiam lorem sed amet quam turpis.</p>
-													<footer>
+										<article>
+											<header class="major">
+												<h2>The Calendar</h2>
+											</header>
+												<iframe src="https://calendar.google.com/calendar/embed?title=Claremont%20Volleyball&amp;height=600&amp;wkst=1&amp;bgcolor=%23ccccff&amp;src=2a4piisvceqq9kcla2bmmuu018%40group.calendar.google.com&amp;color=%23875509&amp;src=70d40is3kna1nvqpmrbse5uv4o%40group.calendar.google.com&amp;color=%23125A12&amp;src=de61sgnoadfu8gpthpic1sg9es%40group.calendar.google.com&amp;color=%23705770&amp;ctz=America%2FLos_Angeles" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+											<footer>
 														<a href="#" class="button alt icon fa-file-o">Continue Reading</a>
 													</footer>
 												</article>
