fixed some navigational awareness and edited calendar page slightly

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -16,6 +16,11 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 	</head>
+	<style>
+		#calendar {
+			text-align: center;
+		}
+	</style>
 	<body class="no-sidebar">
 		<div id="page-wrapper">
 
@@ -42,7 +47,9 @@
 											<header class="major">
 												<h2>The Calendar</h2>
 											</header>
+											<div id="calendar">
 												<iframe src="https://calendar.google.com/calendar/embed?title=Claremont%20Volleyball&amp;height=600&amp;wkst=1&amp;bgcolor=%23ccccff&amp;src=2a4piisvceqq9kcla2bmmuu018%40group.calendar.google.com&amp;color=%23875509&amp;src=70d40is3kna1nvqpmrbse5uv4o%40group.calendar.google.com&amp;color=%23125A12&amp;src=de61sgnoadfu8gpthpic1sg9es%40group.calendar.google.com&amp;color=%23705770&amp;ctz=America%2FLos_Angeles" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+											</div>
 											<footer>
 														<a href="#" class="button alt icon fa-file-o">Continue Reading</a>
 													</footer>
