deleted simon photos and merged files. Also added new womens images folder

--- a/calendar.html
+++ b/calendar.html
@@ -1,5 +1,3 @@
----
----
 <!DOCTYPE HTML>
 <!--
 	ZeroFour by HTML5 UP
@@ -8,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Calendar</title>
+		<title>No Sidebar - ZeroFour by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -16,19 +14,6 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 	</head>
-<<<<<<< HEAD
-	<style>
-		#calendar {
-			text-align: center;
-		}
-	</style>
-=======
-
-	<style>
-		#calendar{text-align: center;}
-	</style>
-
->>>>>>> 45d1a932ec8db55fef608438316bf3bd6e0d8853
 	<body class="no-sidebar">
 		<div id="page-wrapper">
 
@@ -50,28 +35,33 @@
 								<div id="content">
 
 									<!-- Content -->
+
 										<article>
 											<header class="major">
-												<h2>The Calendar</h2>
+												<h2>No Sidebar</h2>
+												<p>Sidebars are not welcome here</p>
 											</header>
-											<div id="calendar">
-												<iframe src="https://calendar.google.com/calendar/embed?title=Claremont%20Volleyball&amp;height=600&amp;wkst=1&amp;bgcolor=%23ccccff&amp;src=2a4piisvceqq9kcla2bmmuu018%40group.calendar.google.com&amp;color=%23875509&amp;src=70d40is3kna1nvqpmrbse5uv4o%40group.calendar.google.com&amp;color=%23125A12&amp;src=de61sgnoadfu8gpthpic1sg9es%40group.calendar.google.com&amp;color=%23705770&amp;ctz=America%2FLos_Angeles" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
-											</div>
+
+<iframe src="https://calendar.google.com/calendar/embed?title=Claremont%20Volleyball&amp;height=600&amp;wkst=1&amp;bgcolor=%23ccccff&amp;src=2a4piisvceqq9kcla2bmmuu018%40group.calendar.google.com&amp;color=%23875509&amp;src=70d40is3kna1nvqpmrbse5uv4o%40group.calendar.google.com&amp;color=%23125A12&amp;src=de61sgnoadfu8gpthpic1sg9es%40group.calendar.google.com&amp;color=%23705770&amp;ctz=America%2FLos_Angeles" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 											<footer>
 														<a href="#" class="button alt icon fa-file-o">Continue Reading</a>
 													</footer>
 												</article>
 											</section>
 
+									</div>
 								</div>
 							</div>
 						</div>
 					</div>
+				</div>
 
 			<!-- Footer Wrapper -->
 				<div id="footer-wrapper">
 					{% include footer.html %}
 				</div>
+
+		</div>
 
 		<!-- Scripts -->
 
