--- a/mens/index.html
+++ b/mens/index.html
@@ -1,191 +1,121 @@
 ---
 ---
-<html>
-	<head>
-		<title>Men's Volleyball</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="/assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-	</head>
-	<style>
-	#header-wrapper {
-		background: url("/images/mens/earl-spike.jpg");
-		background-position: 30% 35%;
-		background-size: cover;
-		padding: 4em 0;
-	}
-	</style>
-  <body class="no-sidebar">
-    <div id="page-wrapper">
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Arezzo - Cafe & Restaurant Template</title>
 
-      <!-- Header Wrapper -->
-        <div id="header-wrapper">
-          <div class="container">
+    <!-- Bootstrap -->
+    <link href="/assets/css/styles.css" rel="stylesheet">
 
-            <!-- Header -->
-              {% include header.html %}
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body>
 
-          </div>
-        </div>
+    <div id="page" class="hfeed site"><!-- start page wrapper -->
 
-      <!-- Main Wrapper -->
-        <div id="main-wrapper">
-          <div class="wrapper style2">
-            <div class="inner">
-              <div class="container">
-                <div id="content">
+    	<!-- <div id="preloader"></div> -->
 
-                  <!-- Content -->
+    	{% include header.html %}
 
-                    <article>
-                      <header class="major">
-                        <h2>Men's Volleyball</h2>
-                        <p>The Claremont Men's Volleyball team is a division II club team that competes in regional and national tournaments. We are currently the reigning champions of the Southern California Collegiate Volleyball League (SCCVL) and we will begin our title defense in January. The team is open to students from any of the Claremont Colleges (including CGU) and we pride ourselves on offering a high level of play to interested players.
+    	<div class="head-title">
+    		<div class="container">
+    			<div class="row">
+    				<h2 class="page-title">About us</h2>
+    				<p class="title-desc">Arezzo Restaurant ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    			</div><!-- end row -->
+    		</div><!-- end container -->
+    	</div><!-- end head-title -->
 
-</p>
-                      </header>
+		<div id="main">
+			<div class="container">
+				<div class="row">
 
-                      <span class="image featured"><img src="/images/mens/nationals-team.jpg" alt="" /></span>
+					<div class="content-area" id="primary"><!-- start content -->
+						<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+							<h3 class="home-title">Our Mission</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+							<hr>
+							<h3 class="home-title">Our Vision</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+							<hr>
+						</div>
+						<div class="service-wrapper">
+							<div class="col-service trigger animated fadeInLeft">
+								<span class="small-icon">
+									<i class="fa fa-fw fa-group"></i>
+								</span>
+								<div class="small-icon-text">
+									<h4>Happy Customers</h4>
+									<p>Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima</p>
+								</div><!-- end text -->
+							</div><!-- end column -->
+							<div class="col-service trigger animated fadeInUp">
+								<span class="small-icon">
+									<i class="fa fa-fw fa-gears"></i>
+								</span>
+								<div class="small-icon-text">
+									<h4>Delicious Food</h4>
+									<p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
+								</div><!-- end text -->
+							</div><!-- end column -->
+							<div class="col-service trigger animated fadeInRight">
+								<span class="small-icon">
+									<i class="fa fa-fw fa-clipboard"></i>
+								</span>
+								<div class="small-icon-text">
+									<h4>Great Atmosphere</h4>
+									<p>Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem</p>
+								</div><!-- end text -->
+							</div><!-- end column -->
 
-                      <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-                      Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-                      Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-                      consequat etiam lorem ipsum dolor sit amet nullam. Phasellus quam turpis,
-                      feugiat sit amet ornare in, hendrerit in lectus. Praesent semper mod quis
-                      eget mi. Etiam eu ante risus. Aliquam erat volutpat. Aliquam luctus et
-                      mattis lectus sit amet pulvinar. Nam turpis nisi consequat etiam.</p>
+							<div class="col-service trigger animated fadeInLeft">
+								<span class="small-icon">
+									<i class="fa fa-fw fa-anchor"></i>
+								</span>
+								<div class="small-icon-text">
+									<h4>Lorem Ipsum</h4>
+									<p>Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima.</p>
+								</div><!-- end text -->
+							</div><!-- end column -->
+							<div class="col-service trigger animated fadeInUp">
+								<span class="small-icon">
+									<i class="fa fa-fw fa-compass"></i>
+								</span>
+								<div class="small-icon-text">
+									<h4>Dolor Sit</h4>
+									<p>Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem</p>
+								</div><!-- end text -->
+							</div><!-- end column -->
+							<div class="col-service trigger animated fadeInRight">
+								<span class="small-icon">
+									<i class="fa fa-fw fa-bolt"></i>
+								</span>
+								<div class="small-icon-text">
+									<h4>Luptatum Delenit</h4>
+									<p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
+								</div><!-- end text -->
+							</div><!-- end column -->
 
-                      <h3>More intriguing information</h3>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam risus, at tempus
-                      justo. Sed dictum rutrum massa eu volutpat. Quisque vitae hendrerit sem. Pellentesque lorem felis,
-                      ultricies a bibendum id, bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet
-                      vulputate. Nulla quis nibh ipsum, sed egestas justo. Morbi ut ante mattis orci convallis tempor.
-                      Etiam a lacus a lacus pharetra porttitor quis accumsan odio. Sed vel euismod nisi. Etiam convallis
-                      rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien.
-                      Donec sagittis massa et leo semper a scelerisque metus faucibus. Morbi congue mattis mi.
-                      ultricies a bibendum id, bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet
-                      vulputate. Nulla quis nibh ipsum, sed egestas justo. Morbi ut ante mattis orci convallis tempor.
-                      Etiam a lacus a lacus pharetra porttitor quis accumsan odio. Sed vel euismod nisi. Etiam convallis
-                      rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien.
-                      Donec sagittis massa et leo semper a scelerisque metus faucibus. Morbi congue mattis mi.
-                      Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum commodo luctus lorem ipsum
-                      dolor sit amet phasellus consequat.</p>
+					</div><!-- end service-content -->
+				</div><!-- end content-area -->
 
-                      <p>Phasellus odio risus, faucibus et viverra vitae, eleifend ac purus. Praesent mattis, enim
-                      quis hendrerit porttitor, sapien tortor viverra magna, sit amet rhoncus nisl lacus nec arcu.
-                      Suspendisse laoreet metus ut metus imperdiet interdum aliquam justo tincidunt. Mauris dolor urna,
-                      fringilla vel malesuada ac, dignissim eu mi. Praesent mollis massa ac nulla pretium pretium.
-                      Suspendisse laoreet metus ut metus imperdiet interdum aliquam justo tincidunt. Mauris dolor urna,
-                      ultricies a bibendum id, bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet
-                      vulputate. Nulla quis nibh ipsum, sed egestas justo. Morbi ut ante mattis orci convallis tempor.
-                      fringilla vel malesuada ac, dignissim eu mi. Praesent mollis massa ac nulla pretium pretium.
-                      Maecenas tortor mauris, consectetur pellentesque dapibus eget, tincidunt vitae arcu.
-                      Vestibulum purus augue, tincidunt sit amet iaculis id, porta eu purus sed feugiat lorem ipsum
-                      dolor nullam blandit tempus.</p>
-                    </article>
+				</div><!-- end row -->
+			</div>
+		</div><!-- end main -->
 
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="wrapper style3">
-            <div class="inner">
-              <div class="container">
-                <div class="row">
-                  <div class="8u 12u(mobile)">
+		{% include footer.html %}
 
-                    <!-- Article list -->
-                      <section class="box article-list">
-                        <h2 class="icon fa-file-text-o">Recent Posts</h2>
+    </div><!-- end #page hfeed site -->
 
-                        <!-- Excerpt -->
-                          <article class="box excerpt">
-                            <a href="#" class="image left"><img src="/images/pic04.jpg" alt="" /></a>
-                            <div>
-                              <header>
-                                <span class="date">July 24</span>
-                                <h3><a href="#">Repairing a hyperspace window</a></h3>
-                              </header>
-                              <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus
-                              semper mod quisturpis nisi consequat etiam lorem. Phasellus quam turpis,
-                              feugiat et sit amet ornare in, hendrerit in lectus semper mod quis eget mi dolore.</p>
-                            </div>
-                          </article>
-
-                        <!-- Excerpt -->
-                          <article class="box excerpt">
-                            <a href="#" class="image left"><img src="/images/pic05.jpg" alt="" /></a>
-                            <div>
-                              <header>
-                                <span class="date">July 18</span>
-                                <h3><a href="#">Adventuring with a knee injury</a></h3>
-                              </header>
-                              <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus
-                              semper mod quisturpis nisi consequat etiam lorem. Phasellus quam turpis,
-                              feugiat et sit amet ornare in, hendrerit in lectus semper mod quis eget mi dolore.</p>
-                            </div>
-                          </article>
-
-                        <!-- Excerpt -->
-                          <article class="box excerpt">
-                            <a href="#" class="image left"><img src="/images/pic06.jpg" alt="" /></a>
-                            <div>
-                              <header>
-                                <span class="date">July 14</span>
-                                <h3><a href="#">Preparing for Y2K38</a></h3>
-                              </header>
-                              <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus
-                              semper mod quisturpis nisi consequat etiam lorem. Phasellus quam turpis,
-                              feugiat et sit amet ornare in, hendrerit in lectus semper mod quis eget mi dolore.</p>
-                            </div>
-                          </article>
-
-                      </section>
-                  </div>
-                  <div class="4u 12u(mobile)">
-
-                    <!-- Spotlight -->
-                      <section class="box spotlight">
-                        <h2 class="icon fa-file-text-o">Spotlight</h2>
-                        <article>
-                          <a href="#" class="image featured"><img src="/images/pic07.jpg" alt=""></a>
-                          <header>
-                            <h3><a href="#">Neural Implants</a></h3>
-                            <p>The pros and cons. Mostly cons.</p>
-                          </header>
-                          <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus semper mod
-                          quisturpis nisi consequat ornare in, hendrerit in lectus semper mod quis eget mi quat etiam
-                          lorem. Phasellus quam turpis, feugiat sed et lorem ipsum dolor consequat dolor feugiat sed
-                          et tempus consequat etiam.</p>
-                          <p>Lorem ipsum dolor quam turpis, feugiat sit amet ornare in, hendrerit in lectus semper
-                          mod quisturpis nisi consequat etiam lorem sed amet quam turpis.</p>
-                          <footer>
-                            <a href="#" class="button alt icon fa-file-o">Continue Reading</a>
-                          </footer>
-                        </article>
-                      </section>
-
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-      <!-- Footer Wrapper -->
-        <div id="footer-wrapper">
-          {% include footer.html %}
-        </div>
-
-    </div>
-
-
-		<!-- Scripts -->
-
-			{% include scripts.html %}
-
-	</body>
+    {% include scripts.html %}
+  </body>
 </html>
