made claremont volleyball logo responsive, changed some padding, and fixed form colors

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="container-fluid" data-scroll-reveal="">
           <div class="row">
             <div class="col-md-6 col-md-offset-3">
-              <img src="images/usa-ball.png" class="img usa-volleyball"></i>
+              <img src="images/usa-ball.png" class="img usa-volleyball">
               <h2>About us</h2>
               <p>The Claremont Men's Volleyball team is a division II club team that competes in regional and national tournaments. We are currently the reigning champions of the Southern California Collegiate Volleyball League (SCCVL) and we will begin our title defense in January. The team is open to students from any of the Claremont Colleges (including CGU) and we pride ourselves on offering a high level of play to interested players.</p>
               <p>The goal of the team is to provide men at the Claremont Colleges an opportunity to play volleyball in a competitive league against other colleges and universities, while still maintaining a fun, positive atmosphere. Practices are typically 2-3 times per week in the evenings or Sunday afternoons and we try to collaborate with the women's team for beach volleyball days on Friday afternoons.</p>
@@ -103,7 +103,7 @@
       <div class="container-fluid">
         <div class="row" data-scroll-reveal="">
           <div class="col-md-6 col-md-offset-3">
-            <i class="fa fa-map-marker fa-4x"></i>
+            <img src="/images/kangaroo-pass.png" class="img kangaroo-pass">
             <h2>Contact</h2>
             <p>If you have any more questions about our season, the team, or how to join, please don't hesitate to check out our page or email us directly. We would love for you to join us on our march to a national championship!</p>
           </div>
