--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
     <!-- Font Awesome -->
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+    <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
   </head>
   
   <body>
