edited styles and title positions

--- a/index.html
+++ b/index.html
@@ -76,20 +76,20 @@
           <div class="row">
             <div class="person col-lg-2 col-lg-offset-3 col-md-4 col-sm-4 col-xs-12" data-scroll-reveal="enter right and move 50px over 1.75s">
               <img src="images/captain1.png" alt="Your Name" class="hvr-float img-responsive">
-              <h3 data-scroll-reveal="enter from top after 1.5s"><span></span> Captain</h3>
-<!--              <span data-scroll-reveal="enter from top after 2s">co-founder</span>-->
+              <h3 data-scroll-reveal="enter from top after 1.5s"><span>Earl</span> Schultz</h3>
+              <span data-scroll-reveal="enter from top after 2s">co-captain</span>
             </div>
             <div class="person col-lg-2 col-md-4 col-sm-4 col-xs-12">
               <img src="images/captain2.png" alt="Your Name" class="hvr-float img-responsive">
               <div>
-              <h3 data-scroll-reveal="enter from top after 1.5s">Captain</h3>
-<!--              <span data-scroll-reveal="enter from top after 2s">co-founder</span>-->
+              <h3 data-scroll-reveal="enter from top after 1.5s"><span>Alex </span>Bresler</h3>
+              <span data-scroll-reveal="enter from top after 2s">co-captain</span>
               </div>
             </div>
             <div class="person col-lg-2 col-md-4 col-sm-4 col-xs-12" data-scroll-reveal="enter left and move 50px over 1.75s">
               <img src="images/captain3.png" alt="Your Name" class="hvr-float img-responsive">
-              <h3 data-scroll-reveal="enter from top after 1.5s"><span></span>Captain</h3>
-<!--              <span data-scroll-reveal="enter from top after 2s">intern</span>-->
+              <h3 data-scroll-reveal="enter from top after 1.5s"><span>Ian</span> Thomas</h3>
+              <span data-scroll-reveal="enter from top after 2s">co-captain</span>
             </div>
           </div>
           <div class="row">
@@ -126,7 +126,7 @@
             <div class="form-group">
               <textarea class="form-control input-lg" id="inputMessage" rows="3" placeholder="Message" onkeydown="Javascript:checkMessage();"></textarea>
             </div>
-            <button type="submit" class="button hvr-float submit" onmouseover="Javascript:checkForm();" onclick="Javascript:mail();" data-scroll-reveal="enter from top after 1.75s">Submit</button>
+            <button type="submit" class="button hvr-float submit" onmouseover="Javascript:checkForm();" onclick="Javascript:mail();" data-scroll-reveal="enter from top after 1.5s">Submit</button>
           </div>
         </div>
         <div class="row">
