--- a/contact/index.html
+++ b/contact/index.html
@@ -1,3 +1,5 @@
+---
+---
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -6,22 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Claremont Volleyball - Coming Soon Page</title>
 
-    <!-- Bootstrap -->
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Main CSS -->
-    <link href="/css/style.css" rel="stylesheet">
-
-    <!-- Google Fonts -->
-    <link href='http://fonts.googleapis.com/css?family=Lato:300,900' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
-
-    <!-- Font Awesome -->
-    <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-    <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
+    {% include head.html %}
   </head>
   
-  <body id="contact-success">
+  <body id="contact-body-success">
     <!-- Contact -->
     <section id="contact-success">
       <div class="container-fluid">
@@ -40,24 +30,10 @@
     <!-- End Contact -->
 
     <!-- Footer -->
-    <footer>
-      <div class="row" data-scroll-reveal="wait 2.25s">
-        <div class="copyright">
-          <p>2016 © Claremont Volleyball</p>
-        </div>
-      </div>
-    </footer>
-    <!-- End Footer -->
+    {% include footer.html %}
 
     <!-- Javascript Files -->
-    <script src="js/jquery-1.11.0.min.js"></script>
-    <script src='js/scrollReveal.js'></script>
-    <script src="js/jquery-ui-1.10.4.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/config.js"></script>
-    <script src="js/script.js"></script>
-    <script src='js/jquery-scrollto.js'></script>
-    <script src="js/countdown.js"></script>
+    {% include scripts.html %}
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
