--- a/index.html
+++ b/index.html
@@ -122,12 +122,12 @@
             <div class="row" data-scroll-reveal="enter from top after 1.25s">
               <div class="col-md-6 col-md-offset-3 col-xs-12">
                 <div class="form-group">
-                  <textarea name="message" class="form-control input-lg" id="inputMessage" rows="3" placeholder="Message" onkeydown="Javascript:checkMessage();"></textarea>
+                  <textarea name="message" class="form-control input-lg" id="inputMessage" rows="3" placeholder="Message"></textarea>
                 </div>
                 <!--  hidden -->
                 <input type="text" name="_gotcha" style="display:none" />
                 <input type="hidden" name="_next" value="/contact" />
-                <button type="submit" class="button hvr-float submit" onmouseover="Javascript:checkForm();" data-scroll-reveal="enter from top after 1.5s">Submit</button>
+                <button type="submit" class="button hvr-float submit" data-scroll-reveal="enter from top after 1.5s">Submit</button>
               </div>
             </div>
         </form>
