--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Claremont Volleyball - Coming Soon Page</title>
+    <meta name="description" content="Claremont Colleges Club Volleyball is a DII team competing for national championships">
+    <meta name="keywords" content="volleyball, club, competitive, men, claremont, calremont, division II, college, claremont mckenna, harvey mudd, pomona, pitzer, championship">
+    <title>Claremont Colleges Club Volleyball - Home</title>
 
     {% include head.html %}
   </head>
@@ -18,7 +20,7 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-12">
-            <img class="logo" src="images/claremont-logo.png" alt="Claremont Volleyball"/>
+            <img class="logo" src="images/claremont-logo.png" alt="Claremont Men's Club Volleyball Logo" title="5C Claremont Men's Volleyball Club"/>
             <h1><span>COMING </span>SOON</h1>
           </div>
         </div>
@@ -56,28 +58,28 @@
         <div class="container-fluid" data-scroll-reveal="">
           <div class="row">
             <div class="col-md-6 col-md-offset-3">
-              <img src="images/usa-ball.png" class="img usa-volleyball">
+              <img src="images/usa-ball.png" class="img usa-volleyball" alt="blue and red men's volleyball" title="usa colored volleyball">
               <h2>About us</h2>
-              <p>The Claremont Men's Volleyball team is a division II club team that competes in regional and national tournaments. We are currently the reigning champions of the Southern California Collegiate Volleyball League (SCCVL) and we will begin our title defense in January. The team is open to students from any of the Claremont Colleges (including CGU) and we pride ourselves on offering a high level of play to interested players.</p>
+              <p>The Claremont Men's Club Volleyball team is a division II club team that competes in regional and national tournaments. We are currently the reigning champions of the Southern California Collegiate Volleyball League (SCCVL) and we will begin our title defense in January. The team is open to students from any of the Claremont Colleges (including CGU) and we pride ourselves on offering a high level of play to interested players.</p>
               <p>The goal of the team is to provide men at the Claremont Colleges an opportunity to play volleyball in a competitive league against other colleges and universities, while still maintaining a fun, positive atmosphere. Practices are typically 2-3 times per week in the evenings or Sunday afternoons and we try to collaborate with the women's team for beach volleyball days on Friday afternoons.</p>
               <p>Our league season is in the Spring semester and ends with a national tournament in April, though we typically hold open-gym practices in the fall, before deciding on a roster at some point in November. Anyone is welcome to join the open practices in September and October, and once we have decided on practice times, we will post them here.</p>
             </div>
           </div>
           <div class="row">
             <div class="person col-lg-2 col-lg-offset-3 col-md-4 col-sm-4 col-xs-12" data-scroll-reveal="enter right and move 50px over 1.75s">
-              <img src="images/captain1.png" alt="Your Name" class="hvr-float img-responsive">
+              <img src="images/captain1.png" alt="Earl Schultz" title="Earl Schultz co-captain spikes" class="hvr-float img-responsive">
               <h3 data-scroll-reveal="enter from top after 1.5s"><span>Earl</span> Schultz</h3>
               <span data-scroll-reveal="enter from top after 2s">co-captain</span>
             </div>
             <div class="person col-lg-2 col-md-4 col-sm-4 col-xs-12">
-              <img src="images/captain2.png" alt="Your Name" class="hvr-float img-responsive">
+              <img src="images/captain2.png" alt="Alex Bresler" title="Alex Bresler co-captain portrait" class="hvr-float img-responsive">
               <div>
               <h3 data-scroll-reveal="enter from top after 1.5s"><span>Alex </span>Bresler</h3>
               <span data-scroll-reveal="enter from top after 2s">co-captain</span>
               </div>
             </div>
             <div class="person col-lg-2 col-md-4 col-sm-4 col-xs-12" data-scroll-reveal="enter left and move 50px over 1.75s">
-              <img src="images/captain3.png" alt="Your Name" class="hvr-float img-responsive">
+              <img src="images/captain3.png" alt="Ian Thomas" title="co-captain Ian Thomas spikes volleyball" class="hvr-float img-responsive">
               <h3 data-scroll-reveal="enter from top after 1.5s"><span>Ian</span> Thomas</h3>
               <span data-scroll-reveal="enter from top after 2s">co-captain</span>
             </div>
@@ -94,7 +96,7 @@
       <div class="container-fluid">
         <div class="row" data-scroll-reveal="">
           <div class="col-md-6 col-md-offset-3">
-            <img src="/images/kangaroo-pass.png" class="img kangaroo-pass">
+            <img src="/images/kangaroo-pass.png" alt="kangaroo passing volleyball" title="A Kangaroo Passing" class="img kangaroo-pass">
             <h2>Contact</h2>
             <p>If you have any more questions about our season, the team, or how to join, please don't hesitate to check out our page or email us directly. We would love for you to join us on our march to a national championship!</p>
           </div>
