changed end date on config.js and edited some img alts

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Claremont Colleges Club Volleyball is a DII team competing for national championships">
+    <meta name="description" content="The Claremont Colleges Club Volleyball Team is a DII organization competing for championships locally and nationally">
     <meta name="keywords" content="volleyball, club, competitive, men, claremont, calremont, division II, college, claremont mckenna, harvey mudd, pomona, pitzer, championship">
     <title>Claremont Colleges Club Volleyball - Home</title>
 
@@ -20,7 +20,7 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-12">
-            <img class="logo" src="images/claremont-logo.png" alt="Claremont Men's Club Volleyball Logo" title="5C Claremont Men's Volleyball Club"/>
+            <img class="logo" src="images/claremont-logo.png" alt="Claremont Men's Club Volleyball - Claremont Volleyball Logo" title="5C Claremont Men's Volleyball Club"/>
             <h1><span>COMING </span>SOON</h1>
           </div>
         </div>
@@ -67,19 +67,19 @@
           </div>
           <div class="row">
             <div class="person col-lg-2 col-lg-offset-3 col-md-4 col-sm-4 col-xs-12" data-scroll-reveal="enter right and move 50px over 1.75s">
-              <img src="images/captain1.png" alt="Earl Schultz" title="Earl Schultz co-captain spikes" class="hvr-float img-responsive">
+              <img src="images/captain1.png" alt="Earl Schultz" title="Earl Schultz volleyball co-captain spikes" class="hvr-float img-responsive">
               <h3 data-scroll-reveal="enter from top after 1.5s"><span>Earl</span> Schultz</h3>
               <span data-scroll-reveal="enter from top after 2s">co-captain</span>
             </div>
             <div class="person col-lg-2 col-md-4 col-sm-4 col-xs-12">
-              <img src="images/captain2.png" alt="Alex Bresler" title="Alex Bresler co-captain portrait" class="hvr-float img-responsive">
+              <img src="images/captain2.png" alt="Alex Bresler" title="Alex Bresler volleyball co-captain portrait" class="hvr-float img-responsive">
               <div>
               <h3 data-scroll-reveal="enter from top after 1.5s"><span>Alex </span>Bresler</h3>
               <span data-scroll-reveal="enter from top after 2s">co-captain</span>
               </div>
             </div>
             <div class="person col-lg-2 col-md-4 col-sm-4 col-xs-12" data-scroll-reveal="enter left and move 50px over 1.75s">
-              <img src="images/captain3.png" alt="Ian Thomas" title="co-captain Ian Thomas spikes volleyball" class="hvr-float img-responsive">
+              <img src="images/captain3.png" alt="Ian Thomas" title="volleyball co-captain Ian Thomas spikes volleyball" class="hvr-float img-responsive">
               <h3 data-scroll-reveal="enter from top after 1.5s"><span>Ian</span> Thomas</h3>
               <span data-scroll-reveal="enter from top after 2s">co-captain</span>
             </div>
