created a claremont colleges section

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class="col-md-6 col-md-offset-3">
               <img src="images/usa-ball.png" class="img usa-volleyball" alt="blue and red men's volleyball" title="usa colored volleyball">
               <h2>About us</h2>
-              <p>The Claremont Men's Club Volleyball team is a division II club team that competes in regional and national tournaments. We are currently the reigning champions of the Southern California Collegiate Volleyball League (SCCVL) and we will begin our title defense in January. The team is open to students from any of the Claremont Colleges (including CGU) and we pride ourselves on offering a high level of play to interested players.</p>
+              <p>The Claremont Men's Club Volleyball Team is a division II college club that competes in regional and national tournaments. We are currently the reigning champions of the Southern California Collegiate Volleyball League (SCCVL) and we will begin our title defense in January. The team is open to students from any of the Claremont Colleges (including CGU) and we pride ourselves on offering a high level of play to interested players.</p>
               <p>The goal of the team is to provide men at the Claremont Colleges an opportunity to play volleyball in a competitive league against other colleges and universities, while still maintaining a fun, positive atmosphere. Practices are typically 2-3 times per week in the evenings or Sunday afternoons and we try to collaborate with the women's team for beach volleyball days on Friday afternoons.</p>
               <p>Our league season is in the Spring semester and ends with a national tournament in April, though we typically hold open-gym practices in the fall, before deciding on a roster at some point in November. Anyone is welcome to join the open practices in September and October, and once we have decided on practice times, we will post them here.</p>
             </div>
@@ -83,6 +83,26 @@
               <h3 data-scroll-reveal="enter from top after 1.5s"><span>Ian</span> Thomas</h3>
               <span data-scroll-reveal="enter from top after 2s">co-captain</span>
             </div>
+          </div>
+          <div class="row">
+              <div class="college col-lg-1 col-lg-offset-3 col-md-1 col-md-offset-3 col-xs-2">
+                  <img src="/images/colleges/cgu.png">
+              </div>
+              <div class="college col-lg-1 col-md-1 col-xs-2">
+                  <img src="/images/colleges/cmc.jpg">
+              </div>
+              <div class="college col-lg-1 col-md-1 col-xs-2">
+                  <img src="/images/colleges/hmc.jpg">
+              </div>
+              <div class="college col-lg-1 col-md-1 col-xs-2">
+                  <img src="/images/colleges/pitzer-college.gif">
+              </div>
+              <div class="college col-lg-1 col-md-1 col-xs-2">
+                  <img src="/images/colleges/pomona.jpg">
+              </div>
+              <div class="college col-lg-1 col-md-1 col-xs-2">
+                  <img src="/images/colleges/scripps-college.png">
+              </div>
           </div>
           <div class="row">
             <a href="#contact" class="button hvr-float" data-scroll-reveal="wait 2.5s">Contact</a>
