changed location of colleges

--- a/index.html
+++ b/index.html
@@ -65,6 +65,26 @@
               <p>Our league season is in the Spring semester and ends with a national tournament in April, though we typically hold open-gym practices in the fall, before deciding on a roster at some point in November. Anyone is welcome to join the open practices in September and October, and once we have decided on practice times, we will post them here.</p>
             </div>
           </div>
+            <div class="row" id="colleges">
+              <div class="college col-lg-1 col-lg-offset-3 col-md-1 col-md-offset-3 col-xs-2">
+                  <img src="/images/colleges/cgu.png">
+              </div>
+              <div class="college col-lg-1 col-md-1 col-xs-2">
+                  <img src="/images/colleges/cmc.jpg">
+              </div>
+              <div class="college col-lg-1 col-md-1 col-xs-2">
+                  <img src="/images/colleges/hmc.jpg">
+              </div>
+              <div class="college col-lg-1 col-md-1 col-xs-2">
+                  <img src="/images/colleges/pitzer-college.gif">
+              </div>
+              <div class="college col-lg-1 col-md-1 col-xs-2">
+                  <img src="/images/colleges/pomona.jpg">
+              </div>
+              <div class="college col-lg-1 col-md-1 col-xs-2">
+                  <img src="/images/colleges/scripps-college.jpg">
+              </div>
+            </div>
           <div class="row">
             <div class="person col-lg-2 col-lg-offset-3 col-md-4 col-sm-4 col-xs-12" data-scroll-reveal="enter right and move 50px over 1.75s">
               <img src="images/captain1.png" alt="Earl Schultz" title="Earl Schultz volleyball co-captain spikes" class="hvr-float img-responsive">
@@ -83,26 +103,6 @@
               <h3 data-scroll-reveal="enter from top after 1.5s"><span>Ian</span> Thomas</h3>
               <span data-scroll-reveal="enter from top after 2s">co-captain</span>
             </div>
-          </div>
-          <div class="row">
-              <div class="college col-lg-1 col-lg-offset-3 col-md-1 col-md-offset-3 col-xs-2">
-                  <img src="/images/colleges/cgu.png">
-              </div>
-              <div class="college col-lg-1 col-md-1 col-xs-2">
-                  <img src="/images/colleges/cmc.jpg">
-              </div>
-              <div class="college col-lg-1 col-md-1 col-xs-2">
-                  <img src="/images/colleges/hmc.jpg">
-              </div>
-              <div class="college col-lg-1 col-md-1 col-xs-2">
-                  <img src="/images/colleges/pitzer-college.gif">
-              </div>
-              <div class="college col-lg-1 col-md-1 col-xs-2">
-                  <img src="/images/colleges/pomona.jpg">
-              </div>
-              <div class="college col-lg-1 col-md-1 col-xs-2">
-                  <img src="/images/colleges/scripps-college.png">
-              </div>
           </div>
           <div class="row">
             <a href="#contact" class="button hvr-float" data-scroll-reveal="wait 2.5s">Contact</a>
