added smoother parallax effect. too much work

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <!-- Intro -->
     <header id="intro">
-      <div class="parallax"></div>
+      <div class="bg-holder parallax" data-width="1920" data-height="1280"></div>
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-12">
